yaml/service_mesh/requestauthentication.yml
apiVersion: v1
items:
- apiVersion: security.istio.io/v1beta1
  kind: RequestAuthentication
  metadata:
    name: quartermaster-jwt
  spec:
    jwtRules:
    - issuer: https://keycloak-sso.apps.sno-demo.nixon.com/auth/realms/apps
      jwks: '{"keys":[{"kid":"_rgD2H8ZXfZKNi_CsvcmsxCoe9vLmu6wMYOr7c4LSxs","kty":"RSA","alg":"RS256","use":"sig","n":"k39Ke7nm7pL6QOnlSJSsDIB2SetlUVFkTAZkgJZN2GZw1WNWFIknx1vAB7ruc_N-xFAMeUXjR-XADn2bZVTiGrifxGGEza2NBk6NNeHGbiXMTtZ1rFaa8YVpKgQrHNrotOvFs0a-SjQwdVD1ASEscLUtXbKLsJ4uarqaI27pfM8D4fBKdsBgYNYTvaSBdIYyKxqJeAGgP62KM59wa_r6d4Har0wLnFJDkEDDyew7ZrN4NhtyA88vCR1CoYyYaZcj5Dg6_gdDSEKLyvgQTah9JWYSVcqIs8LwLnoqy4JWWsmelCJbgkQ_x7kDbyd40l-sP2iCc7fHUdcuesHdSoTuiw","e":"AQAB","x5c":["MIIClzCCAX8CBgF9eHN [...]
    selector:
      matchLabels:
        app: demo-plugin
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
