yaml/service_mesh/dr.mongodb.yml
apiVersion: v1
items:
- apiVersion: networking.istio.io/v1beta1
  kind: DestinationRule
  metadata:
    name: mongodb
  spec:
    host: mongodb
    subsets:
    - labels:
        version: v1
      name: v1
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
