yaml/service_mesh/vs-external.yml
apiVersion: v1
items:
- apiVersion: networking.istio.io/v1beta1
  kind: VirtualService
  metadata:
    name: docker-laptop
  spec:
    hosts:
    - docker-laptop
    tls:
    - match:
      - port: 8080
        sniHosts:
        - docker-laptop
      route:
      - destination:
          host: docker-laptop
          port:
            number: 8080
        weight: 100
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
