yaml/service_mesh/vs-mongo.yml
apiVersion: v1
items:
- apiVersion: networking.istio.io/v1beta1
  kind: VirtualService
  metadata:
    name: mongodb
  spec:
    hosts:
    - mongodb
    http:
    - route:
      - destination:
          host: mongodb
          subset: v1
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
