yaml/service_mesh/vs.yml
apiVersion: v1
items:
- apiVersion: networking.istio.io/v1beta1
  kind: VirtualService
  metadata:
    name: quartermaster-gateway
  spec:
    gateways:
    - quartermaster-gateway
    hosts:
    - '*'
    http:
    - match:
      - uri:
          exact: /
      - uri:
          exact: /overview
      - uri:
          prefix: /api/
      - uri:
          exact: /items
      - uri:
          exact: /storage
      - uri:
          prefix: /q/
      route:
      - destination:
          host: base-station
          port:
            number: 8080
- apiVersion: networking.istio.io/v1beta1
  kind: VirtualService
  metadata:
    name: keycloak
  spec:
    hosts:
    - keycloak-sso.apps.sno-demo.nixon.com
    tls:
    - match:
      - port: 443
        sniHosts:
        - keycloak-sso.apps.sno-demo.nixon.com
      route:
      - destination:
          host: keycloak-sso.apps.sno-demo.nixon.com
          port:
            number: 443
        weight: 100
- apiVersion: networking.istio.io/v1beta1
  kind: VirtualService
  metadata:
    name: base-station
  spec:
    hosts:
    - base-station
    http:
    - route:
      - destination:
          host: base-station
          subset: v1
- apiVersion: networking.istio.io/v1beta1
  kind: VirtualService
  metadata:
    name: demo-app
  spec:
    hosts:
    - demo-app
    http:
    - route:
      - destination:
          host: demo-app
          subset: v1
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
